Avoid wrapping class(es) name text

--- a/less/character.less
+++ b/less/character.less
@@ -26,6 +26,7 @@
       height: 20px;
       font-size: 18px;
       color: @colorTan;
+      white-space: nowrap;
     }
 
     // Experience Tracking
